--- a/MNIST-DANN-NewArchitecture.ipynb
+++ b/MNIST-DANN-NewArchitecture.ipynb
@@ -140,7 +140,7 @@
     "            b_conv0 = bias_variable([32])\n",
     "            h_conv0 = tf.nn.relu(conv2d(X_input, W_conv0) + b_conv0)\n",
     "            h_pool0 = max_pool_2x2(h_conv0)\n",
-    "            #print(h_pool0.get_shape)\n",
+    "            print(h_pool0.get_shape)\n",
     "            \n",
     "            W_conv1 = weight_variable([5, 5, 32, 48])\n",
     "            b_conv1 = bias_variable([48])\n",
@@ -148,7 +148,7 @@
     "            h_pool1 = max_pool_2x2(h_conv1)\n",
     "            \n",
     "            # Save for the domaint-feature\n",
-    "            self.h_pool = h_pool1\n",
+    "            #self.aux_feature = tf.reshape(h_conv1,[-1, 14*14*48])\n",
     "            \n",
     "            # The domain-invariant feature\n",
     "            self.feature = tf.reshape(h_pool1, [-1, 7*7*48])\n",
@@ -165,30 +165,15 @@
     "            all_labels = lambda: self.y\n",
     "            source_labels = lambda: tf.slice(self.y, [0, 0], [batch_size // 2, -1])\n",
     "            self.classify_labels = tf.cond(self.train, source_labels, all_labels)\n",
-    "            \"\"\" \n",
-    "            W_fc0 = weight_variable([7 * 7 * 48, 100])\n",
-    "            b_fc0 = bias_variable([100])\n",
-    "            h_fc0 = tf.nn.relu(tf.matmul(classify_feats, W_fc0) + b_fc0)\n",
-    "            \"\"\"\n",
+    "            \n",
     "            p_dense0 = tf.layers.dense(inputs=classify_feats, units=100, activation=tf.nn.relu)\n",
     "            p_dropout0 = tf.layers.dropout(\n",
-    "                inputs=p_dense0, rate=0.2, training=self.train)\n",
-    "            \n",
-    "            \"\"\"\n",
-    "            W_fc1 = weight_variable([100, 100])\n",
-    "            b_fc1 = bias_variable([100])\n",
-    "            h_fc1 = tf.nn.relu(tf.matmul(h_fc0, W_fc1) + b_fc1)\n",
-    "            \"\"\"\n",
+    "                inputs=p_dense0, rate=0.5, training=self.train)\n",
     "            \n",
     "            p_dense1 = tf.layers.dense(inputs=p_dropout0, units=100, activation=tf.nn.relu)\n",
     "            p_dropout1 = tf.layers.dropout(\n",
-    "                inputs=p_dense1, rate=0.2, training=self.train)\n",
+    "                inputs=p_dense1, rate=0.5, training=self.train)\n",
     "            \n",
-    "            \"\"\"\n",
-    "            W_fc2 = weight_variable([100, 10])\n",
-    "            b_fc2 = bias_variable([10])\n",
-    "            logits = tf.matmul(h_fc1, W_fc2) + b_fc2\n",
-    "            \"\"\"\n",
     "            logits = tf.layers.dense(inputs=p_dropout1, units=10)\n",
     "            \n",
     "            self.pred = tf.nn.softmax(logits)\n",
@@ -197,34 +182,26 @@
     "        # Small MLP for domain prediction with adversarial loss\n",
     "        with tf.variable_scope('domain_predictor'):\n",
     "            \n",
-    "            \"\"\"\n",
-    "            feat = flip_gradient(self.h_pool, self.l)\n",
-    "            \n",
-    "            W_conv2 = weight_variable([2, 2, 48, 48])\n",
-    "            b_conv2 = bias_variable([48])\n",
-    "            h_conv2 = tf.nn.relu(conv2d(feat, W_conv2) + b_conv2)\n",
-    "            h_pool2 = max_pool_2x2(h_conv2)\n",
-    "            \"\"\"\n",
     "            #print(h_pool2)\n",
     "            \n",
     "            # Flip the gradient when backpropagating through this operation\n",
     "            feat = flip_gradient(self.feature, self.l)\n",
-    "            \"\"\"\n",
-    "            le_feat = tf.reshape(h_pool2, [-1, 4*4*48])\n",
-    "            \"\"\"\n",
-    "            \"\"\"\n",
+    "            \n",
     "            d_W_fc0 = weight_variable([7 * 7 * 48, 100])\n",
     "            d_b_fc0 = bias_variable([100])\n",
     "            d_h_fc0 = tf.nn.relu(tf.matmul(feat, d_W_fc0) + d_b_fc0)\n",
-    "            \n",
-    "            d_W_fc1 = weight_variable([100, 2])\n",
-    "            d_b_fc1 = bias_variable([2])\n",
-    "            d_logits = tf.matmul(d_h_fc0, d_W_fc1) + d_b_fc1\n",
     "            \"\"\"\n",
+    "            d_W_fc1 = weight_variable([100, 100])\n",
+    "            d_b_fc1 = bias_variable([100])\n",
+    "            d_h_fc1 = tf.matmul(d_h_fc0, d_W_fc1) + d_b_fc1\n",
+    "            \"\"\"\n",
+    "            dense0 = tf.layers.dense(inputs=d_h_fc0,units=100,activation=tf.nn.relu)\n",
+    "            dropout0 = tf.layers.dropout(inputs=dense0, rate=0.5, training=True)\n",
+    "            d_logits_0 = tf.layers.dense(inputs=dropout0, units=100)\n",
     "            \n",
-    "            dense0 = tf.layers.dense(inputs=feat,units=1024,activation=tf.nn.relu)\n",
-    "            dropout0 = tf.layers.dropout(inputs=dense0, rate=0.2, training=True)\n",
-    "            d_logits = tf.layers.dense(inputs=dropout0, units=2)\n",
+    "            dense1 = tf.layers.dense(inputs=d_logits_0,units=100,activation=tf.nn.relu)\n",
+    "            dropout1 = tf.layers.dropout(inputs=dense1, rate=0.5, training=True)\n",
+    "            d_logits = tf.layers.dense(inputs=dropout1, units=2)\n",
     "            \n",
     "            self.domain_pred = tf.nn.softmax(d_logits)\n",
     "            self.domain_loss = tf.nn.softmax_cross_entropy_with_logits(logits=d_logits, labels=self.domain)\n"
@@ -241,7 +218,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-3-6cedadc0672f>:77: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "<bound method Tensor.get_shape of <tf.Tensor 'feature_extractor/MaxPool:0' shape=(?, 14, 14, 32) dtype=float32>>\n",
+      "WARNING:tensorflow:From <ipython-input-3-e482fc4b9d44>:62: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "\n",
       "Future major versions of TensorFlow will allow gradients to flow\n",
@@ -276,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -284,25 +262,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Source only training\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-389ed32ac8fa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     76\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\nSource only training'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 78\u001b[1;33m \u001b[0msource_acc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget_acc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msource_only_emb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_and_evaluate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'source'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgraph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_it\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     79\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Source (MNIST) accuracy:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msource_acc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Target (MNIST-M) accuracy:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget_acc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-6-389ed32ac8fa>\u001b[0m in \u001b[0;36mtrain_and_evaluate\u001b[1;34m(training_mode, graph, model, num_steps, verbose)\u001b[0m\n\u001b[0;32m     58\u001b[0m         source_acc = sess.run(label_acc,\n\u001b[0;32m     59\u001b[0m                             feed_dict={model.X: mnist_test, model.y: mnist.test.labels,\n\u001b[1;32m---> 60\u001b[1;33m                                        model.train: False})\n\u001b[0m\u001b[0;32m     61\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m         target_acc = sess.run(label_acc,\n",
-      "\u001b[1;32mc:\\users\\dario\\downloads\\gitprojects\\tf-dann\\venv\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m    885\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    886\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[1;32m--> 887\u001b[1;33m                          run_metadata_ptr)\n\u001b[0m\u001b[0;32m    888\u001b[0m       \u001b[1;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    889\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\dario\\downloads\\gitprojects\\tf-dann\\venv\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_run\u001b[1;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m   1108\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m \u001b[1;32mor\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mhandle\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mfeed_dict_tensor\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1109\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[1;32m-> 1110\u001b[1;33m                              feed_dict_tensor, options, run_metadata)\n\u001b[0m\u001b[0;32m   1111\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1112\u001b[0m       \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\dario\\downloads\\gitprojects\\tf-dann\\venv\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_do_run\u001b[1;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m   1284\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1285\u001b[0m       return self._do_call(_run_fn, feeds, fetches, targets, options,\n\u001b[1;32m-> 1286\u001b[1;33m                            run_metadata)\n\u001b[0m\u001b[0;32m   1287\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1288\u001b[0m       \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_do_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_prun_fn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeeds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetches\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\dario\\downloads\\gitprojects\\tf-dann\\venv\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_do_call\u001b[1;34m(self, fn, *args)\u001b[0m\n\u001b[0;32m   1290\u001b[0m   \u001b[1;32mdef\u001b[0m \u001b[0m_do_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1291\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1292\u001b[1;33m       \u001b[1;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1293\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mOpError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1294\u001b[0m       \u001b[0mmessage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\dario\\downloads\\gitprojects\\tf-dann\\venv\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_run_fn\u001b[1;34m(feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[0;32m   1275\u001b[0m       \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_extend_graph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1276\u001b[0m       return self._call_tf_sessionrun(\n\u001b[1;32m-> 1277\u001b[1;33m           options, feed_dict, fetch_list, target_list, run_metadata)\n\u001b[0m\u001b[0;32m   1278\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1279\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_prun_fn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\dario\\downloads\\gitprojects\\tf-dann\\venv\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_call_tf_sessionrun\u001b[1;34m(self, options, feed_dict, fetch_list, target_list, run_metadata)\u001b[0m\n\u001b[0;32m   1365\u001b[0m     return tf_session.TF_SessionRun_wrapper(\n\u001b[0;32m   1366\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptions\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget_list\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1367\u001b[1;33m         run_metadata)\n\u001b[0m\u001b[0;32m   1368\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1369\u001b[0m   \u001b[1;32mdef\u001b[0m \u001b[0m_call_tf_sessionprun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Source only training\n",
+      "\n",
+      "Domain adaptation training\n"
      ]
     }
    ],
@@ -331,7 +293,9 @@
     "            \n",
     "            # Adaptation param and learning rate schedule as described in the paper\n",
     "            p = float(i) / num_steps\n",
-    "            l = 2. / (1. + np.exp(-10. * p)) - 1\n",
+    "            gamma = -50.\n",
+    "            l = 2. / (1. + np.exp(gamma * p)) - 1\n",
+    "            #l = 0.5\n",
     "            lr = 0.01 / (1. + 10 * p)**0.75\n",
     "\n",
     "            # Training step\n",
@@ -384,9 +348,9 @@
     "train_it = 8600\n",
     "\n",
     "print('\\nSource only training')\n",
-    "source_acc, target_acc, _, source_only_emb = train_and_evaluate('source', graph, model, train_it)\n",
-    "print('Source (MNIST) accuracy:', source_acc)\n",
-    "print('Target (MNIST-M) accuracy:', target_acc)\n",
+    "#source_acc, target_acc, _, source_only_emb = train_and_evaluate('source', graph, model, train_it)\n",
+    "#print('Source (MNIST) accuracy:', source_acc)\n",
+    "#print('Target (MNIST-M) accuracy:', target_acc)\n",
     "\n",
     "print('\\nDomain adaptation training')\n",
     "source_acc, target_acc, d_acc, dann_emb = train_and_evaluate('dann', graph, model, train_it)\n",
